--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,3 +1,4 @@
+---
 namespace: radiorabe
 name: podman
 version: 0.0.0
@@ -9,6 +10,7 @@ license_file: LICENSE
 tags:
   - radiorabe
   - podman
+  - application
 dependencies: {}
 repository: https://github.com/radiorabe/ansible-collection-podman
 documentation: https://github.com/radiorabe/ansible-collection-podman/blob/main/README.md
