--- a/roles/socket/meta/main.yml
+++ b/roles/socket/meta/main.yml
@@ -1,9 +1,10 @@
+---
 galaxy_info:
   author: RaBe IT-Reaktion
   description: Enable the podman.socket unit.
   issue_tracker_url: https://github.com/radiorabe/ansible-collection-podman/issues
   license: AGPL-3.0-only
-  min_ansible_version: '2.9'
+  min_ansible_version: "2.14"
   platforms:
     - name: EL
       versions:
